--- a/NZWalks/NZWalks.API/Properties/launchSettings.json
+++ b/NZWalks/NZWalks.API/Properties/launchSettings.json
@@ -1,18 +1,20 @@
 ﻿{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:60474",
-      "sslPort": 44391
+      "applicationUrl": "http://localhost:64433",
+      "sslPort": 44397
     }
   },
   "profiles": {
-    "NZWalks.API": {
+    "NZwalks.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7276;http://localhost:5276",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7294;http://localhost:5294",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,6 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
